[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanosip"
version = "0.0.1"
authors = [
  { name="Philipp Fischer", email="me@phil.fm" },
]
description = "Simply ring a phone via SIP/VoIP"
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["sip", "voip", "call"]

[project.urls]
Homepage = "https://github.com/philipp-fischer/nanosip"
Documentation = "https://github.com/philipp-fischer/nanosip"
Repository = "https://github.com/philipp-fischer/nanosip.git"
Issues = "https://github.com/philipp-fischer/nanosip/issues"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"

